# wemake-python-package

./: cookiecutter.json  pyproject.toml
styles/: flakehell.toml
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pytest.ini  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: misspell.yml
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name.lower().replace('-', '_')}}/: version.py
{{cookiecutter.project_name}}/tests/: test_version.py
{{cookiecutter.project_name}}/tests/test_example/: test_some_function.py
{{cookiecutter.project_name}}/tests/test_version/: test_version.py
