[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "2020.1"
description = "{{ cookiecutter.project_description }}"
license = "{{ cookiecutter.license|upper }}"

authors = []

readme = "README.md"

repository = "https://github.com/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Scientists",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
# pre-commit dependencies are hard coded in .pre-commit-config.yaml
pre-commit = "^2.6.0"
mypy = "0.782"
black = "19.10b0"
isort = "4.3.21"

# checks, formatting and linting
wemake-python-styleguide = "^1.14"
flake8-pytest-style = "^1.2"
nitpick = "^0.22"

safety = "^1.9"

# testing
pytest = "^5.4"
pytest-cov = "^2.10"
pytest-randomly = "^3.4"
pytest-sugar = "^0.9.3"

# docs
sphinx = "^2.2"
sphinx-autodoc-typehints = "^1.10"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.6"

# convinience
bpython = "^0.19"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
  | \.history
)/
'''
